aggiunto_font_e_bug_fix_in_AppFooterMid

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -6,6 +6,15 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Archivo Narrow', sans-serif;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 img {
     max-width: 100%;
 }
